--- a/src/component/Commitees/CabinateMembers/CabinateCard.css
+++ b/src/component/Commitees/CabinateMembers/CabinateCard.css
@@ -1,71 +1,68 @@
-.cabinet-card-main-container{
-    /* border-radius: 10px; */
-    padding: 30px 0px;
-    /* background: #f3f7f5; */
-    /* background: #f3f7f3; */
-    /* background: #ffffff; */
- }
+.cabinet-card-main-container {
+  /* border-radius: 10px; */
+  padding: 30px 0px;
+  /* background: #f3f7f5; */
+  /* background: #f3f7f3; */
+  /* background: #ffffff; */
+}
 
-.cabinateMemberGridForCommittee{
+.cabinateMemberGridForCommittee {
   position: relative;
   left: -40px;
 }
 
-
- /* .primeCabinateMemberCard{
+/* .primeCabinateMemberCard{
    background-color: #ffffff;
    border-radius: 10px;
  } */
 
- .cabinateMemberCardCustom{
-   position: relative;
- }
-
-
-
- .cabinateMemberCustomImgContainer{
-   width: 250px;
-   height: 356px;
-   position: relative;
-   left: 124px;
-   top: 30px;
- } 
- 
- .cabinateMemberCustomImgContainer img{
-   width: 100%;
-   border-radius: 10px;
-   box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
- }
-
- .cabinateMemberCustomDataContainer{
-   background-color: #144E62; 
-   font-family: 'Barlow Condensed', sans-serif;
-   border-radius: 10px;
-   min-height: 400px;
- }
-
- .secondCabinateMemberCardCustom{
+.cabinateMemberCardCustom {
   position: relative;
 }
 
-.secondCabinateMemberCustomImgContainer{
+.cabinateMemberCustomImgContainer {
+  width: 250px;
+  height: 356px;
+  position: relative;
+  left: 124px;
+  top: 30px;
+}
+
+.cabinateMemberCustomImgContainer img {
+  width: 100%;
+  border-radius: 10px;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+}
+
+.cabinateMemberCustomDataContainer {
+  background-color: #144e62;
+  font-family: "Barlow Condensed", sans-serif;
+  border-radius: 10px;
+  min-height: 400px;
+}
+
+.secondCabinateMemberCardCustom {
+  position: relative;
+}
+
+.secondCabinateMemberCustomImgContainer {
   width: 200px;
   height: 306px;
   position: absolute;
   left: 0;
   top: 0;
   z-index: 99;
-} 
+}
 
-.secondCabinateMemberCustomImgContainer img{
+.secondCabinateMemberCustomImgContainer img {
   width: 100%;
   border-radius: 10px;
   box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
 }
 
- .secondCabinateMemberCustomDataContainer{
-  background-color: #144E62; 
-  font-family: 'Barlow Condensed', sans-serif;
+.secondCabinateMemberCustomDataContainer {
+  background-color: #144e62;
+  font-family: "Barlow Condensed", sans-serif;
   border-radius: 10px;
   min-height: 300px;
   min-width: 280px;
@@ -75,75 +72,73 @@
   padding-top: 6.8rem;
   padding-left: 2rem;
   padding-right: 2rem;
-
 }
- 
+
 /* icons  */
- .cabinate-social-icons{
-    /* margin-bottom: -20px !important; */
-    /* background: rgb(199, 178, 119); */
-    /* padding: 5px 20px; */
-    border-radius: 8px;
+.cabinate-social-icons {
+  /* margin-bottom: -20px !important; */
+  /* background: rgb(199, 178, 119); */
+  /* padding: 5px 20px; */
+  border-radius: 8px;
 }
- .cabinate-social-icons a > i {
-    padding-right: 20px; 
-    font-size: 20px;   
-    cursor: pointer;
-    margin-top: 3px;
- }
+.cabinate-social-icons a > i {
+  padding-right: 20px;
+  font-size: 20px;
+  cursor: pointer;
+  margin-top: 3px;
+}
 
- /* MEDIA  */
+/* MEDIA  */
 
- @media screen and (max-width: 385px){
+@media screen and (max-width: 385px) {
   /* .secondCabinateMemberGridForCommittee{
     position: relative;
     left: 10px;
   } */
-  .cabinet-card-main-container{
+  .cabinet-card-main-container {
     /* border-radius: 10px; */
     padding: 20px 0px;
     /* background: #f3f7f5; */
     /* background: #f3f7f3; */
     /* background: #ffffff; */
- }
-  .cabinateMemberGridForCommittee{
+  }
+  .cabinateMemberGridForCommittee {
     position: static;
     left: 0;
   }
-  
-  
-   .primeCabinateMemberCard{
-     background-color: #ffffff;
-     border-radius: 10px;
-   }
-  
-   .cabinateMemberCardCustom{
-     position: relative;
-   }
-  
-   .cabinateMemberCustomImgContainer{
-     width: 200px ;
-     height: max-content;
-     position: absolute;
-     z-index: 99;
-     left: 60px;
-     top: -50px;
-   } 
-   .cabinateMemberCustomDataContainer{
-    width: 380px ;
+
+  .primeCabinateMemberCard {
+    background-color: #ffffff;
+    border-radius: 10px;
+  }
+
+  .cabinateMemberCardCustom {
+    position: relative;
+  }
+
+  .cabinateMemberCustomImgContainer {
+    width: 200px;
+    height: max-content;
+    position: absolute;
+    z-index: 99;
+    left: 60px;
+    top: -50px;
+  }
+  .cabinateMemberCustomDataContainer {
+    width: 380px;
     max-height: 300px;
     position: static;
     left: 20px;
-   }
-   .dataDetailContainerCabinet{
+  }
+  .dataDetailContainerCabinet {
     position: relative;
     top: 200px;
     left: 70px;
-   }
+  }
 
-   .secondCabinateMemberCustomDataContainer{
-    background-color: #144E62; 
-    font-family: 'Barlow Condensed', sans-serif;
+  .secondCabinateMemberCustomDataContainer {
+    background-color: #144e62;
+    font-family: "Barlow Condensed", sans-serif;
     border-radius: 10px;
     min-height: 340px;
     min-width: 290px;
@@ -152,152 +147,141 @@
     left: 50px;
     padding-top: 9rem;
     padding-left: 4rem;
-
-  
   }
 
-  .secondCabinateMemberGridForCommittee .secondCabinetMemberCommitteeColumn:last-child .secondDataDetailContainerCabinet{
-      position: absolute;
-      left: 30px;
+  .secondCabinateMemberGridForCommittee
+    .secondCabinetMemberCommitteeColumn:last-child
+    .secondDataDetailContainerCabinet {
+    position: absolute;
+    left: 30px;
   }
- }
+}
 
-
-
- @media only screen and (min-width: 386px) and (max-width: 400px){
-  .cabinet-card-main-container{
+@media only screen and (min-width: 386px) and (max-width: 400px) {
+  .cabinet-card-main-container {
     /* border-radius: 10px; */
     padding: 30px 20px;
     /* background: #f3f7f5; */
     /* background: #f3f7f3; */
     /* background: #ffffff; */
- }
+  }
 
-  .cabinateMemberGridForCommittee{
+  .cabinateMemberGridForCommittee {
     position: static;
     left: 0;
   }
-  
-  
-   .primeCabinateMemberCard{
-     background-color: #ffffff;
-     border-radius: 10px;
-   }
-  
-   .cabinateMemberCardCustom{
-     position: relative;
-   }
-  
-   .cabinateMemberCustomImgContainer{
-     width: 180px !important;
-     height: 280px ;
-     position: absolute;
-     z-index: 99;
-     left: -30px;
-     top: 30px;
-   } 
-   .cabinateMemberCustomDataContainer{
-    width: 350px ;
-    
+
+  .primeCabinateMemberCard {
+    background-color: #ffffff;
+    border-radius: 10px;
+  }
+
+  .cabinateMemberCardCustom {
+    position: relative;
+  }
+
+  .cabinateMemberCustomImgContainer {
+    width: 180px !important;
+    height: 280px;
+    position: absolute;
+    z-index: 99;
+    left: -30px;
+    top: 30px;
+  }
+  .cabinateMemberCustomDataContainer {
+    width: 350px;
+
     position: relative;
     left: 20px;
-   }
-   .dataDetailContainerCabinet{
+  }
+  .dataDetailContainerCabinet {
     position: relative;
     top: 160px !important;
     left: 120px !important;
-   }
-   .secondCabinateMemberCustomDataContainer {
+  }
+  .secondCabinateMemberCustomDataContainer {
     min-height: 345px;
-   }
-   .secondDataDetailContainerCabinet{
+  }
+  .secondDataDetailContainerCabinet {
     position: absolute;
     top: 145px;
     left: 50px;
-   }
-
- }
- 
-
+  }
+}
 
 @media only screen and (min-width: 401px) and (max-width: 480px) {
-  .cabinet-card-main-container{
+  .cabinet-card-main-container {
     padding: 30px 20px;
+  }
 
- }
-
-  .cabinateMemberGridForCommittee{
+  .cabinateMemberGridForCommittee {
     position: static;
     left: 0;
   }
-  
-  
-   .primeCabinateMemberCard{
-     background-color: #ffffff;
-     border-radius: 10px;
-   }
-  
-   .cabinateMemberCardCustom{
-     position: relative;
-   }
-  
-   .cabinateMemberCustomImgContainer{
-     width: 200px ;
-     height: 300px;
-     position: absolute;
-     z-index: 99;
-     left: -30px;
-     top: 30px;
-   } 
-   .cabinateMemberCustomDataContainer{
-    width: 350px ;
+
+  .primeCabinateMemberCard {
+    background-color: #ffffff;
+    border-radius: 10px;
+  }
+
+  .cabinateMemberCardCustom {
+    position: relative;
+  }
+
+  .cabinateMemberCustomImgContainer {
+    width: 200px;
+    height: 300px;
+    position: absolute;
+    z-index: 99;
+    left: -30px;
+    top: 30px;
+  }
+  .cabinateMemberCustomDataContainer {
+    width: 350px;
     max-height: 300px;
     position: relative;
     left: 20px;
-   }
-   .dataDetailContainerCabinet{
+  }
+  .dataDetailContainerCabinet {
     position: relative;
     top: 180px;
     left: 140px;
-   }
+  }
 
-   .secondCabinateMemberCustomDataContainer {
+  .secondCabinateMemberCustomDataContainer {
     min-height: 345px;
-   }
-   .secondDataDetailContainerCabinet{
+  }
+  .secondDataDetailContainerCabinet {
     position: absolute;
     top: 145px;
     left: 50px;
-   }
-  
+  }
 }
 
 @media only screen and (min-width: 481px) and (max-width: 767px) {
-
-  .cabinateMemberGridForCommittee{
+  .cabinateMemberGridForCommittee {
     position: static;
   }
-  
-  .cabinateMemberCustomImgContainer{
 
+  .cabinateMemberCustomImgContainer {
     /* height: fit-content; */
     position: absolute;
     left: 0;
     z-index: 99;
     top: 20;
-  } 
-  
-  .cabinateMemberCustomImgContainer img{
+  }
+
+  .cabinateMemberCustomImgContainer img {
     width: 100%;
     border-radius: 10px;
     box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
   }
- 
-  .cabinateMemberCustomDataContainer{
+
+  .cabinateMemberCustomDataContainer {
     position: relative;
     left: 200px;
-    background-color: #144E62; 
-    font-family: 'Barlow Condensed', sans-serif;
+    background-color: #144e62;
+    font-family: "Barlow Condensed", sans-serif;
     border-radius: 10px;
     min-height: 400px;
     min-width: 270px;
@@ -306,24 +290,25 @@
     padding-right: 10px;
     padding-top: 6rem !important;
   }
-  .dataDetailContainerCabinet h2{
+  .dataDetailContainerCabinet h2 {
     font-size: 2.5rem !important;
   }
-  .dataDetailContainerCabinet span{
+  .dataDetailContainerCabinet span {
     font-size: 1.5rem !important;
   }
-  .secondCabinateMemberGridForCommittee{
+  .secondCabinateMemberGridForCommittee {
     position: relative;
     left: 40px;
   }
-   
-  .secondCabinetMemberCommitteeColumn:nth-child(2), .secondCabinetMemberCommitteeColumn:nth-child(3){
+
+  .secondCabinetMemberCommitteeColumn:nth-child(2),
+  .secondCabinetMemberCommitteeColumn:nth-child(3) {
     margin-top: 6rem !important;
   }
-  
-  .secondCabinateMemberCustomDataContainer{
-    background-color: #144E62; 
-    font-family: 'Barlow Condensed', sans-serif;
+
+  .secondCabinateMemberCustomDataContainer {
+    background-color: #144e62;
+    font-family: "Barlow Condensed", sans-serif;
     border-radius: 10px;
     min-height: 300px;
     min-width: 300px;
@@ -333,17 +318,15 @@
     padding-top: 6.8rem;
     padding-left: 2rem;
     padding-right: 2rem;
-  
   }
-  
 }
 
 @media only screen and (min-width: 768px) and (max-width: 991px) {
-  .cabinateMemberGridForCommittee{
+  .cabinateMemberGridForCommittee {
     position: relative;
     left: 45px;
   }
-  .cabinateMemberCustomImgContainer{
+  .cabinateMemberCustomImgContainer {
     width: 190px;
     height: 240px;
     /* height: fit-content; */
@@ -351,17 +334,17 @@
     left: -85px;
     z-index: 99;
     top: 10px;
-  } 
-  
-  .cabinateMemberCustomImgContainer img{
+  }
+
+  .cabinateMemberCustomImgContainer img {
     width: 100%;
     border-radius: 10px;
     box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
   }
- 
-  .cabinateMemberCustomDataContainer{
-    background-color: #144E62; 
-    font-family: 'Barlow Condensed', sans-serif;
+
+  .cabinateMemberCustomDataContainer {
+    background-color: #144e62;
+    font-family: "Barlow Condensed", sans-serif;
     border-radius: 10px;
     min-height: 330px;
     padding-left: 50px !important;
@@ -369,119 +352,117 @@
     padding-right: 10px;
     font-size: 1rem !important;
   }
-  .dataDetailContainerCabinet h2{
+  .dataDetailContainerCabinet h2 {
     font-size: 1.7rem !important;
   }
-  .dataDetailContainerCabinet span{
+  .dataDetailContainerCabinet span {
     font-size: 1rem !important;
   }
- 
-  .secondCabinateMemberCardCustom{
-   position: relative;
- }
- 
- .secondCabinateMemberCustomImgContainer{
-   width: 200px;
-   height: 306px;
-   position: absolute;
-   left: 0;
-   top: 0;
-   z-index: 99;
- } 
- 
- .secondCabinateMemberCustomImgContainer img{
-   width: 100%;
-   border-radius: 10px;
-   box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
- }
- 
-  .secondCabinateMemberCustomDataContainer{
-   background-color: #144E62; 
-   font-family: 'Barlow Condensed', sans-serif;
-   border-radius: 10px;
-   min-height: 300px;
-   min-width: 300px;
-   position: relative;
-   top: 120px;
-   left: 50px;
-   padding-top: 6.8rem;
-   padding-left: 2rem;
-   padding-right: 2rem;
- 
- }
 
-.cabinetMemberCommitteeColumn:nth-child(2){
-  position: relative;
-  left: 40px;
-}
- .secondCabinateMemberGridForCommittee .secondCabinetMemberCommitteeColumn:nth-child(1){
-  position: relative;
-  left: -20px;
+  .secondCabinateMemberCardCustom {
+    position: relative;
+  }
+
+  .secondCabinateMemberCustomImgContainer {
+    width: 200px;
+    height: 306px;
+    position: absolute;
+    left: 0;
+    top: 0;
+    z-index: 99;
+  }
+
+  .secondCabinateMemberCustomImgContainer img {
+    width: 100%;
+    border-radius: 10px;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+  }
+
+  .secondCabinateMemberCustomDataContainer {
+    background-color: #144e62;
+    font-family: "Barlow Condensed", sans-serif;
+    border-radius: 10px;
+    min-height: 300px;
+    min-width: 300px;
+    position: relative;
+    top: 120px;
+    left: 50px;
+    padding-top: 6.8rem;
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
+
+  .cabinetMemberCommitteeColumn:nth-child(2) {
+    position: relative;
+    left: 40px;
+  }
+  .secondCabinateMemberGridForCommittee
+    .secondCabinetMemberCommitteeColumn:nth-child(1) {
+    position: relative;
+    left: -20px;
+  }
+
+  .secondCabinateMemberGridForCommittee
+    .secondCabinetMemberCommitteeColumn:last-child {
+    margin-top: 100px !important;
+  }
 }
 
- .secondCabinateMemberGridForCommittee .secondCabinetMemberCommitteeColumn:last-child {
-  margin-top: 100px !important;
-}
-}
-
-@media only screen and (min-width:992) and (max-width: 1024px) {
-  .cabinateMemberCustomImgContainer{
+@media only screen and (min-width: 992) and (max-width: 1024px) {
+  .cabinateMemberCustomImgContainer {
     width: 220px;
     height: 356px;
     position: relative;
     left: 100px;
     top: 30px;
-  } 
-  
-  .cabinateMemberCustomImgContainer img{
+  }
+
+  .cabinateMemberCustomImgContainer img {
     width: 100%;
     border-radius: 10px;
     box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
   }
- 
-  .cabinateMemberCustomDataContainer{
-    background-color: #144E62; 
-    font-family: 'Barlow Condensed', sans-serif;
+
+  .cabinateMemberCustomDataContainer {
+    background-color: #144e62;
+    font-family: "Barlow Condensed", sans-serif;
     border-radius: 10px;
     min-height: 400px;
   }
- 
-  .secondCabinateMemberCardCustom{
-   position: relative;
- }
- 
- .secondCabinateMemberCustomImgContainer{
-   width: 200px;
-   height: 306px;
-   position: absolute;
-   left: 0;
-   top: 0;
-   z-index: 99;
- } 
- 
- .secondCabinateMemberCustomImgContainer img{
-   width: 100%;
-   border-radius: 10px;
-   box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
- }
- 
-  .secondCabinateMemberCustomDataContainer{
-   background-color: #144E62; 
-   font-family: 'Barlow Condensed', sans-serif;
-   border-radius: 10px;
-   min-height: 300px;
-   min-width: 280px;
-   position: relative;
-   top: 120px;
-   left: 50px;
-   padding-top: 6.8rem;
-   padding-left: 2rem;
-   padding-right: 2rem;
- 
- }
-  
+
+  .secondCabinateMemberCardCustom {
+    position: relative;
+  }
+
+  .secondCabinateMemberCustomImgContainer {
+    width: 200px;
+    height: 306px;
+    position: absolute;
+    left: 0;
+    top: 0;
+    z-index: 99;
+  }
+
+  .secondCabinateMemberCustomImgContainer img {
+    width: 100%;
+    border-radius: 10px;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+  }
+
+  .secondCabinateMemberCustomDataContainer {
+    background-color: #144e62;
+    font-family: "Barlow Condensed", sans-serif;
+    border-radius: 10px;
+    min-height: 300px;
+    min-width: 280px;
+    position: relative;
+    top: 120px;
+    left: 50px;
+    padding-top: 6.8rem;
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
 }
 
 @media screen and (max-width: 1199px) {
-  
 }
